# segbox

./: .gitignore  README.md  asd.py  local_file_picker.py  main.py  pyproject.toml  run.py  test.py  testser.py
segbox/: init_core.py  local_file_picker.py  main.py  run.py
segbox/core/: __init__.py  data_handler.py  reader.py  states.py  stats.py
segbox/core/configs/: static_params.py
segbox/core/data_manager/: __init__.py  data_analyzer.py  data_handler.py  data_reader.py  data_writer.py
segbox/core/user/: __init__.py  user_specs_detector.py
segbox/core/utils/: __init__.py  image_utils.py  util.py
segbox/gui/: __init__.py  dialogs.py  header.py  main_window.py  parts.py  toolbar.py
segbox/gui/dialog/: dialogs.py
segbox/gui/toolbar/: toolbar.py
segbox/gui/viewers/: __init__.py  custom_view.py  init_viewer_stats.py  init_viewers.py  sync_viewer_stats.py  viewer_stats.py  viewer_updater.py
segbox/sam/: runi.py
segbox/sam/scripts/: amg.py  export_onnx_model.py
segbox/sam/segment_anything/: predictor.py
segbox/sam/segment_anything/modeling/: image_encoder.py  mask_decoder.py  transformer.py
segbox/sam/segment_anything/utils/: amg.py  onnx.py  transforms.py
