[tool.poetry]
name = "segbox"
version = "0.1.0"
description = ""
authors = ["melandur <account@qunit.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.9,<3.12"
numpy = "^1.24.2"
pillow = "^9.5.0"
nibabel = "^5.1.0"
black = "^23.3.0"
isort = "^5.12.0"
qdarkstyle = "^3.1"
loguru = "^0.7.0"
qimage2ndarray = "^1.10.0"
pyqtdarktheme = "^2.1.0"
psutil = "^5.9.4"
simpleitk = "^2.2.1"
torch = "^2.0.0"
pyqt5 = "5.15.0"
nicegui = "^1.2.6"
pynput = "^1.7.6"
justpy = "^0.13.0"
watchdog = "^3.0.0"
pywebview = "^4.0.2"
omegaconf = "^2.3.0"
pydicom = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.black]
line-length = 120
skip-string-normalization = true
